--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-       <p> Pirmas </P>
-	   <p> Antras </p>
+       <p> <a href="2/keliones.html" > Pirmas </a></P>
+	   <p> <a href="3/index.html"> Antras </a> </p>
 	   <p> Trecias </p>
 </html>	   
