--- a/3/index.html
+++ b/3/index.html
@@ -10,9 +10,9 @@
   <h2 class="antras"> Šioje svetainėje rasite nuorodas į puikius greito maisto receptus</h2>
 	<table class="hh">
   <tr> 
-    <th class="hh">  <a href= "https://www.delfi.lt/1000receptu/receptai/naminiai-kebabai-su-cesnakiniu-padazu.d?id=70459590" ><img src="KEBABAS-BLOKELIS.jpg" height="150" width="200"> </a></th>
-    <th class="hh"> <a href= "https://www.15min.lt/maistas/receptas/takai-paploteliai-su-mesos-idaru-1053" ><img src="beef-tacos.jpg" height="150" width="200"> </a></th> 
-    <th class="hh"> <a href= "antras.html"><img src="burger-smurger.jpg" height="150" width="200"> </a></th>
+    <th>  <a href= "https://www.delfi.lt/1000receptu/receptai/naminiai-kebabai-su-cesnakiniu-padazu.d?id=70459590" ><img src="KEBABAS-BLOKELIS.jpg" height="150" width="200"> </a></th>
+    <th> <a href= "https://www.15min.lt/maistas/receptas/takai-paploteliai-su-mesos-idaru-1053" ><img src="beef-tacos.jpg" height="150" width="200"> </a></th> 
+    <th> <a href= "antras.html"><img src="burger-smurger.jpg" height="150" width="200"> </a></th>
   </tr>
 <p id="g"> Vytautas Velička </p>  
 </table>
