--- a/3/antras.html
+++ b/3/antras.html
@@ -17,6 +17,7 @@
 	<li>Na ir teliko baigiamieji darbai – traškios salotos lapas, svogūnai, pomidoro riekelė. Ak, ir, žinoma, padažas, nepamirškite padažo!</li>
 		</ol>
 	<h2 class="img"> <img src="burger.jpg" height="9%" width="14%"></h2>
+		<h3 href="index.html"> Atgal </h3>
 
 
 
