--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <body>
        <p> <a href="2/keliones.html" > Pirmas </a></P>
 	   <p> <a href="3/index.html"> Antras </a> </p>
-	   <p> Trecias </p>
+	<p><a href="blogas/index.html"> Trecias </a> </p>
 </html>	   
