--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
        <p> <a href="2/keliones.html" > Pirmas </a></P>
 	   <p> <a href="3/index.html"> Antras </a> </p>
 	<p><a href="Blogas/index.html"> Trecias </a> </p>
-	<p> <a href="nd.html">Ketvirtas </a> </p>
+	<p> <a href="4/nd.html">Ketvirtas </a> </p>
 </html>	   
