--- a/4/nd.html
+++ b/4/nd.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="div">
-                <p>2^5/2=?(Atsakymą pateikite šimtųjų tikslumu)</p>
+                <p>2^(5/2)=?(Atsakymą pateikite šimtųjų tikslumu)</p>
                 <input id="3">
                 <button id="4" onclick="f2()">Tikrink</button>
             </div>
